# drone

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  FlightTest.cpp  Makefile  README  dataCollector.cpp  dataCollector.h  droneController.cpp  i2cctl.cpp  i2cctl.h  installRPIToolchain  installTest  notes.txt  rules.mk  tasks.h  tester.cpp  todo  vector.cpp  vector.h
data/: CMakeLists.txt  dynamic_set.c  string_additions.c
devices/: device_manager.h
drivers/: CMakeLists.txt  i2cctl.c
flight/: CMakeLists.txt  FlightManager.c  FlightManager.cpp  FlightManager.h  FlightTest.c  FlightTest.cpp  Makefile  MotorController.c  MotorController.cpp  MotorController.h  MotorControllerHighLevel.c  MotorControllerLowLevel.c  MotorManager.h  Orientation.c  Orientation.cpp  Orientation.h  PWMController.c  PWMController.cpp  PWMController.h  SensorManager.c  SensorManager.cpp  SensorManager.h  Vector.c  Vector.cpp  Vector.h  i2cctl.c  i2cctl.cpp  i2cctl.h  matrix.c  mpu6050.cpp
headers/: FlightManager.h  MotorController.h  Orientation.h  PWMController.h  SensorManager.h  geometry.h  i2cctl.h  matrix.h  mpu6050.h
include/: MotorController.h
include/data/: dynamic_set.h  string_additions.h
include/flight/: FlightManager.h
include/sensors/: device_manager.h  sensor_manager.h  vector_sensor.h
motion/: CMakeLists.txt  FlightManager.cpp  MotorControllerHighLevel.cpp  MotorControllerLowLevel.cpp  PWMController.cpp
orientation/: CMakeLists.txt  Orientation.cpp
scripts/: installRPIToolchain  installTest  install_toolchain_rpi0
sensors/: CMakeLists.txt  Makefile  SensorManager.cpp  device_manager.c  vector_sensor.cpp
